# contadorDeFuros

./: .gitignore  CMakeLists.txt  README.md  codigo_revisado.cpp  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
main/: CMakeLists.txt  app_types.h  armazenamento.c  armazenamento.h  display_driver.c  display_driver.h  idf_component.yml  interface_usuario.c  interface_usuario.h  main.c  metricas.c  metricas.h  metricas_logic.c  metricas_logic.h  wifi_manager.c  wifi_manager.h
tests/metricas_logic/: CMakeLists.txt
tests/metricas_logic/main/: CMakeLists.txt  test_metricas_logic.c  test_runner.c
